fix for step 2 buttons being cut off, and word-wrap fix for calendar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2926,6 +2926,8 @@ input.devise_submit_button {
   -webkit-border-radius: 11;
   -moz-border-radius: 11;
   border-radius: 11px;
+  display: inline-block;
+  margin-bottom: 40px;
   text-shadow: 0px 2px 3px #666666;
   -webkit-box-shadow: 0px 3px 10px #666666;
   -moz-box-shadow: 0px 3px 10px #666666;
@@ -2941,6 +2943,8 @@ input.devise_submit_button {
   -webkit-border-radius: 11;
   -moz-border-radius: 11;
   border-radius: 11px;
+  display: inline-block;
+  margin-bottom: 40px;
   text-shadow: 0px 2px 3px #666666;
   -webkit-box-shadow: 0px 3px 10px #666666;
   -moz-box-shadow: 0px 3px 10px #666666;
